# rust-swiftclient

./: Cargo.toml  README.md
src/: auth.rs  client.rs  lib.rs  main.rs
src/auth/: errors.rs  mod.rs  request.rs  sessions.rs
src/client/: errors.rs  mod.rs  request.rs
src/http/: client.rs
src/swift_auth/: auth_requests.rs  auth_sessions.rs  mod.rs
tests/: lib.rs
