[package]
name = "rust-swiftclient"
version = "0.2.0"
authors = ["Joel Wright <joel.wright@gmail.com>"]

[dependencies]
docopt = ">=0.6"
hyper = { git = "https://github.com/hyperium/hyper.git" }
chrono = ">=0.2"
rustc-serialize = ">=0.3.19"
url = ">=0.2"
log = ">=0.3.6"
# curl = ">=0.3.1"

[lib]
name = "rust_swiftclient"
path = "src/lib.rs"

[[bin]]
name = "rsc"
path = "src/bin/rsc.rs"

# [dependencies.chrono]
# version = "*"
# features = ["rustc-serialize"]
